# freemonad-hs

./: README.md  freemonad-hs.cabal
app/: Main.hs
src/FreeMonad/: RPNExpr.hs
