name:                freemonad-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lagenorhynque/freemonad-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Kent OHASHI
maintainer:          ignorantia.juris.non.excusa@gmail.com
copyright:           2016 Kent OHASHI
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FreeMonad.Example
                     , FreeMonad.RPNExpr
  build-depends:       base >= 4.7 && < 5
                     , free >= 4.12.4
  default-language:    Haskell2010

executable freemonad-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free >= 4.12.4
                     , freemonad-hs
  default-language:    Haskell2010

test-suite freemonad-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , free >= 4.12.4
                     , freemonad-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lagenorhynque/freemonad-hs
